<resources>
    <string name="app_name">EOS Control Center</string>
    <string name="eos_settings">EOS Settings</string>
    <string name="eos_warning">Warning</string>
    <string name="eos_reboot">The device will now restart to apply the new setting.</string>
    <string name="eos_interface">Interface</string>
    <string name="eos_interface_launch">Eos Interface</string>
    <string name="eos_interface_theme">Theme Chooser</string>
    <string name="eos_interface_theme_pref_title">Select a theme</string>
    <string name="eos_interface_settings_standard">Standard Quick settings</string>
    <string name="eos_interface_settings">Eos toggle settings</string>
    <string name="eos_interface_eos_settings_enable_title">Enable Eos toggles</string>
    <string name="eos_interface_eos_settings_enable_summary">Traditional toggles will show in notification panel</string>
    <string name="eos_interface_eos_settings_enabled">Select toggles</string>
    <string name="eos_interface_toggle_indicator_color_uri">eos_systemui_settings_indicator_color</string>
    <string name="eos_interface_statusbar_color_uri">eos_systemui_statusbar_color</string>
    <string name="eos_interface_eos_settings_indicator_visibility_title">Hide toggle indicator</string>
    <string name="eos_interface_eos_settings_indicator_visibility_summary">Use with themes with multi-state icons</string>
    <string name="eos_interface_settings_color_title">Indicator color</string>
    <string name="eos_interface_settings_color_default_title">Restore default color</string>
    <string name="eos_interface_eos_settings_summary">Enable and resequence toggles</string>
    <string name="eos_interface_statusbar">Statusbar</string>
    <string name="eos_interface_systembar">System bar</string>
    <string name="eos_interface_systembar_color">System Bar Color</string>
    <string name="eos_interface_systembar_fat_fingers_title">Larger Clear All button</string>
    <string name="eos_interface_systembar_fat_fingers_summary">Assists with clearing notifications if the button is too small</string>
    <string name="eos_interface_statusbar_appearance">Appearance</string>
    <string name="eos_interface_statusbar_glass_style_summary">Apply transparency to the statusbar</string>
    <string name="eos_interface_statusbar_battery">Battery</string>
    <string name="eos_interface_statusbar_battery_color_uri">eos_systemui_battery_text_color</string>
    <string name="eos_interface_statusbar_battery_settings">Battery Settings</string>
    <string name="eos_interface_statusbar_battery_icon_title">Show battery icon</string>
    <string name="eos_interface_statusbar_battery_text_title">Show battery text</string>
    <string name="eos_interface_statusbar_battery_icon">Battery Icon Settings</string>
    <string name="eos_interface_statusbar_battery_text">Battery Text Settings</string>
    <string name="eos_interface_statusbar_battery_text_percent_title">Show percent</string>
    <string name="eos_interface_statusbar_battery_color_title">Battery text color</string>
    <string name="eos_interface_statusbar_restore_stock_color">Restore stock color</string>
    <string name="eos_interface_statusbar_clock">Clock</string>
    <string name="eos_interface_statusbar_clock_color_uri">eos_systemui_clock_color</string>
    <string name="eos_interface_statusbar_clock_settings">Clock Settings</string>
    <string name="eos_interface_statusbar_clock_title">Show clock</string>
    <string name="eos_interface_statusbar_clock_color_title">Clock color</string>
    <string name="eos_interface_statusbar_clock_am_pm_title">AM/PM Style</string>
    <string name="eos_interface_statusbar_use_tablet_ui">Use the full tablet status bar</string>
    <string name="eos_interface_statusbar_color">Status Bar Color</string>
    <string name="eos_interface_navigation">Navigation</string>
    <string name="eos_interface_show_ecc_icon_title">Show ECC icon</string>
    <string name="eos_interface_show_ecc_icon_summary">It takes a few seconds for your launcher to detect the icon change.</string>
    <string name="eos_interface_show_ED_icon_title">Show Expanded Desktop icon</string>
    <string name="eos_system">System</string>
    <string name="eos_info">Info</string>
    <string name="eos_interface_navbar">Navigation Bar</string>
    <string name="eos_interface_navbar_appearance">Navigation Bar Appearance</string>
    <string name="eos_interface_systemui_mode_title">UI Mode</string>
    <string name="eos_interface_systemui_mode_capkey_warning">\nNotice:\u0020 You appear to be simulating a capacitive key device. \nUse caution</string>
    <string name="eos_interface_systemui_mode_summary">Current Mode:\u0020</string>
    <string name="eos_interface_systemui_expanded_desktop_title">Expanded Desktop</string>
    <string name="eos_interface_systemui_expanded_desktop_summary">Hide interface bars</string>
    <string name="eos_systemui_mode_category_title">User Interface</string>
    <string name="eos_interface_navbar_color_uri">eos_systemui_navbar_color</string>
    <string name="eos_interface_systembar_appearance">System Bar Appearance</string>
    <string name="eos_interface_softkey_color">Set Softkey Color</string>
    <string name="eos_interface_softkey_glow_color">Set Glow Color</string>
    <string name="eos_interface_softkey_color_default">Remove Softkey Color</string>
    <string name="eos_interface_softkey_glow_color_default">Remove Glow Color</string>
    <string name="eos_interface_navbar_color_title">Set Color</string>
    <string name="eos_interface_navbar_restore_stock_color">Restore stock color</string>
    <string name="eos_interface_navbar_low_profile_title">Low profile mode</string>
    <string name="eos_interface_navbar_low_profile_summary">A smaller navigation bar</string>
    <string name="eos_interface_navbar_category_visibility">Visibility</string>
    <string name="eos_interface_navbar_category_style">Appearance and Style</string>
    <string name="eos_interface_navbar_category_actions">Custom Actions</string>
    <string name="eos_interface_navbar_category_capkey">Capacitive Keys</string>
    <string name="eos_interface_force_navbar_summary">Use the software navigation bar instead of capacitive keys</string>
    <string name="eos_interface_force_navbar_title">Navigation Bar</string>
    <string name="eos_interface_navbar_tablet_style_title">Softkeys position</string>
    <string name="eos_interface_navbar_tablet_style_summary">Enable to left align softkeys on navigation bar</string>
    <string name="eos_interface_navbar_nx_style_title">NX Gesture Bar</string>
    <string name="eos_interface_navbar_nx_style_summary">Swipe left for \"back\" Swipe up for \"home\" \nSwipe right for \"recent\" Longpress bar for \"menu\" \nLongpress searchlight for search panel</string>
    <string name="eos_interface_navbar_glass_style_title">Glass</string>
    <string name="eos_interface_navbar_glass_style_summary">Apply transparency to system bars</string>
    <string name="eos_interface_navbar_glass_level_title">Glass effect</string>
    <string name="eos_interface_navbar_glass_level_summary">Set transparency level for launcher glass effect</string>
    <string name="eos_interface_softkey_settings">Softkey Settings</string>
    <string name="eos_interface_softkeys_longpress">Long Press Actions</string>
    <string name="eos_interface_softkey_package_removed">The previously selected package was not found</string>
    <string name="eos_interface_softkeys_back">Back Key</string>
    <string name="eos_interface_softkey_longpress_target">Set application</string>
    <string name="eos_interface_softkeys_home">Home Key</string>
    <string name="eos_interface_softkeys_recent">Recent Key</string>
    <string name="eos_interface_softkeys_menu">Menu Key</string>
    <string name="eos_interface_activity_dialog_title">Select Activity</string>
    <string name="eos_interface_softkeys_pref_default_title">No Activity Selected</string>
    <string name="eos_interface_softkeys_pref_default_summary">Tap to select a custom long press activity</string>
    <string name="color_preference_title">Color</string>
    <string name="eos_system_settings">System</string>
    <string name="eos_system_volume_keys_rotate">Volume keys switch on rotation</string>
    <string name="eos_system_volume_keys_rotate_description">When the device is rotated 90 or 180 degrees anti-clockwise.</string>
    <string name="eos_system_volume_default_stream">Default volume control stream</string>
    <string name="eos_system_volume_default_stream_description">Default volume stream to control when none is specified</string>
    <string name="eos_system_volume_keys_music_control">Volume keys long press music control</string>
    <string name="eos_system_volume_keys_music_control_summary">Long press volume up or down to seek music and both to toggle play/pause</string>
    <string name="eos_system_wifi_idle_ms">Screen Off Wifi Idle Delay</string>
    <string name="eos_system_wifi_idle_ms_summary">Override Wifi timeout delay when keep on during sleep is set to never or plugged in</string>
    <string name="eos_system_disable_battery_warning_title">Disable Low Battery dialogs</string>
    <string name="eos_system_disable_battery_warning_summary">Prevent annoying low battery warning alerts from popping up</string>
    <string name="eos_system_power_unplug_screen_off_title">Screen behavior when charging</string>
    <string name="eos_system_power_unplug_screen_off_summary">Screen stays off when plugged or unplugged</string>
    <string name="eos_performance">Performance Settings</string>
    <string name="eos_performance_cpu">CPU Overclocking</string>
    <string name="eos_performance_cpu_on_boot">Set clock values on boot</string>
    <string name="eos_performance_cpu_governor">Governor</string>
    <string name="eos_performance_cpu_min">Minimum frequency</string>
    <string name="eos_performance_cpu_max">Maximum frequency</string>
    <string name="eos_performance_iosched">I/O scheduler</string>
    <string name="eos_performance_iosched_on_boot">Set value on boot</string>
    <string name="eos_performance_fast_charge">USB Fast Charge</string>
    <string name="eos_performance_sweep2wake">Sweep2Wake</string>
    <string name="eos_performance_sweep2wake_on_boot">Start on boot</string>
    <string name="eos_performance_zram_category">ZRAM</string>
    <string name="eos_performance_zram_title">Enable ZRAM on boot</string>
    <string name="eos_performance_zram_summary">10% of RAM will be used as swap space</string>
    <string name="eos_device_settings">Device settings</string>
    <string name="eos_wifi_regulatory_domain_selector">Change wifi regulatory domain</string>
    <string name="eos_interface_navring_settings">Quick launch targets</string>
    <string name="eos_interface_navring_settings_summary">Click and drag on a softkey to access</string>
    <string name="eos_net_hostname">Network hostname</string>
    <string name="eos_screenshot_scaling_title">Screenshot scale factor</string>
    <string name="eos_screenshot_scaling_summary">Current scale factor:\u0020</string>
    <string name="eos_screenshot_scaling_dialog_title">Select value</string>
    <string name="eos_privacy_settings">Privacy settings</string>
    <string name="eos_interface_lockscreen">Lockscreen Options</string>
    <string name="eos_interface_lockscreen_show_all_widgets">Allow Selection Of All Widgets</string>
    <string name="eos_interface_lockscreen_show_all_widgets_summary">Allow all widgets to be added to the lockscreen widgets panel</string>
    <string name="eos_interface_panel_title">Quick Settings Panel</string>
    <string name="eos_interface_panel_summary">Enable and resequence tiles</string>
    <string name="eos_interface_panel_pref">Settings Panel Controls</string>
    <string name="eos_interface_panel_column_title">Column width</string>
    <string name="eos_interface_panel_column_summary">Number of single tiles per row</string>
</resources>