<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Team EOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/org.eos.controlcenter"
    android:title="@string/eos_interface_navbar" >

    <PreferenceCategory
        android:key="eos_systemui_mode_category"
        android:title="@string/eos_systemui_mode_category_title" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/systemui_mode_entries"
            android:entryValues="@array/systemui_mode_values"
            android:key="eos_systemui_mode"
            android:summary="@string/eos_interface_systemui_mode_summary"
            android:title="@string/eos_interface_systemui_mode_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="eos_navbar_style"
        android:title="@string/eos_interface_navbar_category_style" >
        <org.eos.controlcenter.EosPreference
            android:key="nav_bar_color_pref"
            settings:defaultVal="@integer/softkey_default_color_val"
            settings:prefTitle="@string/color_preference_title"
            settings:providerUri="@string/eos_interface_navbar_color_uri" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/navbar_size_entries"
            android:entryValues="@array/navbar_size_values"
            android:key="eos_interface_navbar_size"
            android:summary="@string/eos_interface_navbar_low_profile_summary"
            android:title="@string/eos_interface_navbar_low_profile_title" />

        <CheckBoxPreference
            android:key="eos_interface_navbar_nx_style"
            android:summary="@string/eos_interface_navbar_nx_style_summary"
            android:title="@string/eos_interface_navbar_nx_style_title" />
        <CheckBoxPreference
            android:key="eos_interface_navbar_glass_style"
            android:summary="@string/eos_interface_navbar_glass_style_summary"
            android:title="@string/eos_interface_navbar_glass_style_title" />

        <org.eos.controlcenter.GlassDialogPreference
            android:dependency="eos_interface_navbar_glass_style"
            android:key="eos_interface_navbar_glass_seekbar"
            android:summary="@string/eos_interface_navbar_glass_level_summary"
            android:title="@string/eos_interface_navbar_glass_level_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="eos_navbar_actions"
        android:title="@string/eos_interface_navbar_category_actions" >
        <PreferenceScreen
            android:key="eos_softkey_settings"
            android:title="@string/eos_interface_softkey_settings" />
        <PreferenceScreen
            android:key="eos_search_panel_settings"
            android:summary="@string/eos_interface_navring_settings_summary"
            android:title="@string/eos_interface_navring_settings" />
    </PreferenceCategory>

</PreferenceScreen>