<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/eos_performance" >

    <PreferenceCategory
        android:key="eos_settings_cpu"
        android:title="@string/eos_performance_cpu" >
        <CheckBoxPreference
            android:key="eos_performance_cpu_set_on_boot"
            android:title="@string/eos_performance_cpu_on_boot" />

        <ListPreference
            android:key="eos_performance_cpu_governor"
            android:title="@string/eos_performance_cpu_governor" />
        <ListPreference
            android:key="eos_performance_cpu_min"
            android:title="@string/eos_performance_cpu_min" />
        <ListPreference
            android:key="eos_performance_cpu_max"
            android:title="@string/eos_performance_cpu_max" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="eos_settings_iosched"
        android:title="@string/eos_performance_iosched" >
        <ListPreference
            android:key="eos_performance_iosched"
            android:title="@string/eos_performance_iosched" />
        <CheckBoxPreference
            android:key="eos_performance_iosched_on_boot"
            android:title="@string/eos_performance_iosched_on_boot" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="eos_settings_zram"
        android:title="@string/eos_performance_zram_category" >
        <CheckBoxPreference
            android:key="eos_performance_zram"
            android:title="@string/eos_performance_zram_title"
            android:summary="@string/eos_performance_zram_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="eos_settings_fast_charge"
        android:title="@string/eos_performance_fast_charge" >
        <CheckBoxPreference
            android:key="eos_performance_fast_charge"
            android:title="@string/eos_performance_fast_charge" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="eos_settings_sweep2wake"
        android:title="@string/eos_performance_sweep2wake" >
        <CheckBoxPreference
            android:key="eos_performance_sweep2wake_enable"
            android:title="@string/eos_performance_sweep2wake" />
        <CheckBoxPreference
            android:key="eos_performance_sweep2wake_set_on_boot"
            android:title="@string/eos_performance_sweep2wake_on_boot" />
    </PreferenceCategory>

</PreferenceScreen>